# rtsp2web

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json
.devcontainer/: devcontainer.json
.github/workflows/: cpp-linux.yml  cpp-windows.yml  cross.yml  deploy.yaml  docker.yaml
html/: audioprocessor.js  index.html  nav.css  style.css  video.html  videoprocessor.js  videostream.js  wc-video-ws.js  worker.html  worker.js
inc/: codechandler.h  h264handler.h  h265handler.h  h26xhandler.h  httpserver.h  logger.h  rtsp2ws.h  rtsp2wsserver.h  rtsp2wsstream.h  rtspcallback.h  session.h  wsstream.h
local/: config.json
snap/: snapcraft.yaml
snap/hooks/: install
src/: main.cpp
vuejs/: index.html  package-lock.json
vuejs/src/: App.vue
www/: all.html  allworker.html  audioprocessor.js  canvas2d-renderer.js  index.html  mediastream.js  spinner.css  spinner.js  style.css  video-ws.css  video-ws.js  video.html  videoprocessor.js  wc-video-ws.js  webgpu-renderer.js  worker.html  worker.js
www/video-ws/: audioprocessor.js  video-worker-ws.js  video-ws.css  video-ws.js  videoprocessor.js  worker.js
